--- a/app/styles/type.css
+++ b/app/styles/type.css
@@ -1,51 +1,52 @@
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\000034}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\000034}}
 .UMBmapApplication h1, .UMBmapApplication h2, .UMBmapApplication h3, .UMBmapApplication h4, .UMBmapApplication h5, .UMBmapApplication h6,
 .UMBmapApplication .h1, .UMBmapApplication .h2, .UMBmapApplication .h3, .UMBmapApplication .h4, .UMBmapApplication .h5, .UMBmapApplication .h6 {
   font-family: sans-serif;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000312}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000312}}
 .UMBmapApplication h2 {
   text-align: center;
   color: #1a1a1a;
   font-weight: normal;
-  font-size: 1.5em;
-  padding: 5px;
+  font-size: 2em;
+  padding: 30px 25px 10px;
   margin: 0px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000321}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000321}}
 .UMBmapApplication .sponsor {
   text-align: center;
-  padding: 15px;
+  padding: 5px 20px 20px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000327}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000327}}
 .UMBmapApplication .instructions {
+  color: #FFFFFF;
   text-align: center;
   background-color: #d3d3d3;
   padding: 5px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000333}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000334}}
 .UMBmapApplication .filter-title {
   margin-top: 0px;
   margin-bottom: 0px;
   text-align: center;
   width: 100%;
   color: #000;
-  padding: 5px;
+  padding: 15px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000346}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000347}}
 .UMBmapApplication .UMBmapApplicationModal .barMeta {
   font-size: .8em;
   font-style: italic;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000350}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000351}}
 .UMBmapApplication .UMBmapApplicationModal p.siteMeta {
   margin-bottom: 0px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000353}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000354}}
 .UMBmapApplication .UMBmapApplicationModal p.siteDescription {
   margin-top: 10px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/EBSrockyMtn\/Sites\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000357}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/eyebyte\/Desktop\/dev\/SwcosClientMap\/app\/styles\/type\.scss}line{font-family:\0000358}}
 .UMBmapApplication .UMBmapApplicationModal .siteAdminInfo ul, .UMBmapApplication .UMBmapApplicationModal .siteAdminInfo li {
   padding-top: 3px;
   background: none;
