--- a/app/styles/type.scss
+++ b/app/styles/type.scss
@@ -13,19 +13,20 @@ h2 {
 	text-align: center;
 	color: #1a1a1a;
 	font-weight: normal;
-	font-size: 1.5em;
-	padding: 5px;
+	font-size: 2em;
+	padding: 30px 25px 10px;
 	margin: 0px;
 }
 // Top text on sponsors
 .sponsor {
 	text-align: center;
-	
-	padding: 15px;
+
+	padding: 5px 20px 20px;
 }
 // Instructions above map
 .instructions {
-	text-align: center;
+  color: #FFFFFF;
+  text-align: center;
 	background-color: #d3d3d3;
 	padding: 5px;
 }
@@ -35,17 +36,17 @@ h2 {
   margin-bottom: 0px;
   text-align: center;
   width:100%;
-  
+
   color: #000;
-  
-  padding: 5px;
+
+  padding: 15px;
 }
 
 // Modal Specific Type
 .UMBmapApplicationModal {
 	.barMeta {
 		font-size: .8em;
-		font-style: italic;	
+		font-style: italic;
 	}
 	p.siteMeta {
 		margin-bottom: 0px;
